bcorro: Ajustes de calidad de codigo y mejoras